[gd_scene load_steps=33 format=2]

[ext_resource path="res://scripts/game_scene.gd" type="Script" id=1]
[ext_resource path="res://scenes/obstacles/billboard.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/background/trees.png" type="Texture" id=4]
[ext_resource path="res://sprites/background/buildings.png" type="Texture" id=5]
[ext_resource path="res://sprites/background/synthwave_sun.png" type="Texture" id=6]
[ext_resource path="res://sprites/background/sky.png" type="Texture" id=7]
[ext_resource path="res://sprites/background/houses.png" type="Texture" id=8]
[ext_resource path="res://scenes/music_player.tscn" type="PackedScene" id=9]
[ext_resource path="res://scenes/obstacles/poles.tscn" type="PackedScene" id=10]
[ext_resource path="res://sprites/spacebar.png" type="Texture" id=11]
[ext_resource path="res://fonts/lychee soda/lychee_soda_large.tres" type="DynamicFont" id=12]
[ext_resource path="res://scenes/obstacles/roof.tscn" type="PackedScene" id=13]
[ext_resource path="res://scripts/input__tutorial.gd" type="Script" id=14]
[ext_resource path="res://sprites/click.png" type="Texture" id=15]
[ext_resource path="res://scripts/screen_shake.gd" type="Script" id=16]
[ext_resource path="res://scenes/obstacles/arrow_of_diamonds.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/obstacles/high-rise.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/obstacles/high-rise-roof.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/obstacles/high-rise-opening.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/score.tscn" type="PackedScene" id=21]
[ext_resource path="res://fonts/lychee soda/lychee_soda_medium.tres" type="DynamicFont" id=22]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.196078, 0.192157, 0.231373, 0 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverCanvas/GameOverContainer/RetryButton:margin_left")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 836.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverCanvas/Panel:custom_styles/panel:bg_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.196078, 0.192157, 0.231373, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameOverCanvas/GameOverContainer/VBoxContainer:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -850, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "slide_text"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("GameOverCanvas/Panel:custom_styles/panel:bg_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.196078, 0.192157, 0.231373, 0 ), Color( 0.196078, 0.192157, 0.231373, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GameOverCanvas/GameOverContainer/RetryButton:margin_left")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.3, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 836.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GameOverCanvas/GameOverContainer/VBoxContainer:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.3, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -850, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 480, 10 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 15 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 15 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "press",
"speed": 4.0
} ]

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 48, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 11 )
region = Rect2( 48, 0, 48, 32 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "press",
"speed": 4.0
} ]

[node name="GameScene" type="Node2D"]
script = ExtResource( 1 )
obstacles = [ ExtResource( 10 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 10 ), ExtResource( 13 ) ]
billboard = ExtResource( 2 )

[node name="BackgroundCanvas" type="CanvasLayer" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="BackgroundCanvas"]

[node name="BuildingsLayer" type="ParallaxLayer" parent="BackgroundCanvas/ParallaxBackground"]
motion_mirroring = Vector2( 960, 0 )

[node name="Sprite" type="Sprite" parent="BackgroundCanvas/ParallaxBackground/BuildingsLayer"]
texture = ExtResource( 5 )
centered = false

[node name="HousesLayer" type="ParallaxLayer" parent="BackgroundCanvas/ParallaxBackground"]
motion_scale = Vector2( 2, 1 )
motion_mirroring = Vector2( 960, 0 )

[node name="Sprite" type="Sprite" parent="BackgroundCanvas/ParallaxBackground/HousesLayer"]
texture = ExtResource( 8 )
centered = false

[node name="TreesLayer" type="ParallaxLayer" parent="BackgroundCanvas/ParallaxBackground"]
motion_scale = Vector2( 3, 1 )
motion_mirroring = Vector2( 960, 0 )

[node name="Sprite" type="Sprite" parent="BackgroundCanvas/ParallaxBackground/TreesLayer"]
texture = ExtResource( 4 )
centered = false

[node name="SkyCanvas" type="CanvasLayer" parent="BackgroundCanvas"]
layer = -101

[node name="SkySprite" type="Sprite" parent="BackgroundCanvas/SkyCanvas"]
texture = ExtResource( 7 )
centered = false

[node name="SunSprite" type="Sprite" parent="BackgroundCanvas/SkyCanvas"]
position = Vector2( 484, 302 )
texture = ExtResource( 6 )

[node name="GameOverCanvas" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="GameOverCanvas"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 3 )

[node name="GameOverContainer" type="VBoxContainer" parent="GameOverCanvas"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -172.0
margin_top = -141.5
margin_right = 172.0
margin_bottom = 141.5
custom_constants/separation = 20

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverCanvas/GameOverContainer"]
margin_left = -850.0
margin_right = -506.0
margin_bottom = 208.0
alignment = 1

[node name="TitleContainer" type="HBoxContainer" parent="GameOverCanvas/GameOverContainer/VBoxContainer"]
margin_right = 344.0
margin_bottom = 64.0
custom_constants/separation = 20
alignment = 1

[node name="GameLabel" type="Label" parent="GameOverCanvas/GameOverContainer/VBoxContainer/TitleContainer"]
margin_left = 22.0
margin_right = 162.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 12 )
text = "GAME"

[node name="OverLabel" type="Label" parent="GameOverCanvas/GameOverContainer/VBoxContainer/TitleContainer"]
margin_left = 182.0
margin_right = 322.0
margin_bottom = 64.0
custom_colors/font_color = Color( 1, 0.364706, 0.8, 1 )
custom_fonts/font = ExtResource( 12 )
text = "OVER"

[node name="ScoreLabel" type="Label" parent="GameOverCanvas/GameOverContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 344.0
margin_bottom = 100.0
custom_fonts/font = ExtResource( 22 )
text = "SCORE"
align = 1

[node name="Score" parent="GameOverCanvas/GameOverContainer/VBoxContainer" instance=ExtResource( 21 )]
anchor_right = 0.0
margin_top = 104.0
margin_right = 344.0
margin_bottom = 136.0

[node name="BestLabel" type="Label" parent="GameOverCanvas/GameOverContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 344.0
margin_bottom = 172.0
custom_fonts/font = ExtResource( 22 )
text = "BEST"
align = 1

[node name="BestScore" parent="GameOverCanvas/GameOverContainer/VBoxContainer" instance=ExtResource( 21 )]
anchor_right = 0.0
margin_top = 176.0
margin_right = 344.0
margin_bottom = 208.0
show_best = true

[node name="RetryButton" type="Button" parent="GameOverCanvas/GameOverContainer"]
margin_left = 836.0
margin_top = 228.0
margin_right = 344.0
margin_bottom = 266.0
mouse_default_cursor_shape = 2
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 22 )
text = "RETRY"
flat = true

[node name="GameOverAnimationPlayer" type="AnimationPlayer" parent="GameOverCanvas"]
root_node = NodePath("../..")
anims/RESET = SubResource( 1 )
anims/slide_text = SubResource( 4 )

[node name="ScoreCanvas" type="CanvasLayer" parent="."]
layer = 0

[node name="Score" parent="ScoreCanvas" instance=ExtResource( 21 )]

[node name="CeilingStaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="CeilingStaticBody2D"]
position = Vector2( 480, -10 )
shape = SubResource( 5 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, 270 )
scale = Vector2( 2, 2 )
jump_strength = 10.0

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 480, 270 )
current = true
script = ExtResource( 16 )

[node name="ObstacleSpawnTimer" type="Timer" parent="."]

[node name="MusicPlayer" parent="." instance=ExtResource( 9 )]
layer = 0

[node name="TutorialLayer" type="CanvasLayer" parent="."]
script = ExtResource( 14 )

[node name="SpacebarSprite" type="AnimatedSprite" parent="TutorialLayer"]
position = Vector2( 188, 303 )
scale = Vector2( 2, 2 )
frames = SubResource( 8 )
animation = "press"
playing = true

[node name="ClickSprite" type="AnimatedSprite" parent="TutorialLayer"]
position = Vector2( 271, 296 )
scale = Vector2( 2, 2 )
frames = SubResource( 13 )
animation = "press"
playing = true

[connection signal="pressed" from="GameOverCanvas/GameOverContainer/RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="timeout" from="ObstacleSpawnTimer" to="." method="spawn_obstacle"]
